GPIO_INTERRUPT/build/log/idf_py_stderr_output_39032
Command: make -j 10 all
/home/jona/esp-idf/Projects/GPIO_INTERRUPT/main/GPIO_INTERRUPT.c: In function 'app_main':
/home/jona/esp-idf/Projects/GPIO_INTERRUPT/main/GPIO_INTERRUPT.c:39:63: error: expected expression before 'void'
   39 |         gpio_isr_handler_add(interrupt_pin, gpio_isr_handler, void* interrupt_pin);
      |                                                               ^~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/GPIO_INTERRUPT.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8889: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
